bugfix in expense type setting

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -48,6 +48,7 @@ labelDate=Date
 labelDescription=Description
 labelEmail=Email:
 labelExpense=Expense
+labelExpenseType=Expense Type
 labelFax=Fax:
 labelGross=Gross
 labelIBAN=IBAN:
