--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -41,6 +41,7 @@ labelDate=Datum
 labelDescription=Beschreibung
 labelEmail=Email:
 labelExpense=Ausgabe
+labelExpenseType=Ausgabentyp
 labelFax=Fax:
 labelGross=Brutto
 labelIBAN=IBAN:
