added window title

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -220,6 +220,7 @@ RevenueDialog_net=Net
 RevenueDialog_paymentDate=Payment Date
 RevenueDialog_search=Search
 RevenueDialog_tax=Tax
+RevenueDialog_title=Revenue
 RevenueDialog_totals=Totals
 
 SendInvoiceCommand_message=Select the date that invoice [{0}] was billed
