--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -213,6 +213,7 @@ RevenueDialog_net=Netto
 RevenueDialog_paymentDate=Zahlungseingang
 RevenueDialog_search=Suchen
 RevenueDialog_tax=Steuer
+RevenueDialog_title=Ums\u00E4tze
 RevenueDialog_totals=Summen
 
 SendInvoiceCommand_message=W\u00E4hlen Sie das Datum, f\u00FCr die Fakturierung der Rechnung [{0}]
