view menu changes i18n

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -88,3 +88,6 @@ commandCategory.revenue.name = Revenue Command Category
 
 # COMMANDS - OTHER
 command.export.data.label = Export data to XML...
+
+# COMMANDS - REPORTS
+command.reports.label = Reports...
