--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -84,3 +84,6 @@ command.revenue.name = Umsatz...
 
 # COMMANDS - OTHER
 command.export.data.label = Daten nach XML exportieren...
+
+# COMMANDS - REPORTS
+command.reports.label = Berichte...
