added report dialog for expenses

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -48,7 +48,9 @@ labelDate=Date
 labelDescription=Description
 labelEmail=Email:
 labelExpense=Expense
+labelExpenses=Expenses
 labelExpenseType=Expense Type
+labelExport=Export...
 labelFax=Fax:
 labelGross=Gross
 labelIBAN=IBAN:
@@ -66,13 +68,16 @@ labelPostalCode=Post Code:
 labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
 labelRevenueRelevant=Revenue-relevant
+labelSearch=Search
 labelStreet=Street:
 labelSubtotal=Sub total
+labelTaxes=Taxes
 labelTaxId=Tax ID:
 labelTaxRate=Tax Rate
 labelTotalGross=Gross total
 labelTotalNet=Net total
 labelTotalTax=Tax total
+labelTotals=Totals
 labelUnit=Unit
 
 # time frame
@@ -211,17 +216,11 @@ ReportGenerationUtil_successText=PDF Generation finished
 
 RevenueDialog_client=Client
 RevenueDialog_defaultFilename=Revenue
-RevenueDialog_export=Export...
-RevenueDialog_gross=Gross
 RevenueDialog_invoiceDate=Invoice Date
 RevenueDialog_invoiceNo=Invoice no
 RevenueDialog_invoices=Invoices
-RevenueDialog_net=Net
 RevenueDialog_paymentDate=Payment Date
-RevenueDialog_search=Search
-RevenueDialog_tax=Tax
 RevenueDialog_title=Revenue
-RevenueDialog_totals=Totals
 
 SendInvoiceCommand_message=Select the date that invoice [{0}] was billed
 SendInvoiceCommand_title=Mark invoice as billed...
