--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -41,7 +41,9 @@ labelDate=Datum
 labelDescription=Beschreibung
 labelEmail=Email:
 labelExpense=Ausgabe
+labelExpenses=Ausgaben
 labelExpenseType=Ausgabentyp
+labelExport=Exportieren...
 labelFax=Fax:
 labelGross=Brutto
 labelIBAN=IBAN:
@@ -59,13 +61,16 @@ labelPostalCode=Postleitzahl:
 labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
 labelRevenueRelevant=Umsatzrelevant
+labelSearch=Suchen
 labelStreet=Strasse:
 labelSubtotal=Zwischensumme
+labelTaxes=Steuern
 labelTaxId=Steuernummer:
 labelTaxRate=Steuersatz
 labelTotalGross=Summe brutto
 labelTotalNet=Summe netto
-labelTotalTax=Steuern
+labelTotalTax=Summe Steuern
+labelTotals=Summen
 labelUnit=Einheit
 
 # time frame
@@ -204,17 +209,11 @@ ReportGenerationUtil_successText=PDF Generierung erfolgreich
 
 RevenueDialog_client=Kunde
 RevenueDialog_defaultFilename=Umsatz
-RevenueDialog_export=Export...
-RevenueDialog_gross=Brutto
 RevenueDialog_invoiceDate=Rechnungsdatum
 RevenueDialog_invoiceNo=Rechnungsnr.
 RevenueDialog_invoices=Rechnungen
-RevenueDialog_net=Netto
 RevenueDialog_paymentDate=Zahlungseingang
-RevenueDialog_search=Suchen
-RevenueDialog_tax=Steuer
 RevenueDialog_title=Ums\u00E4tze
-RevenueDialog_totals=Summen
 
 SendInvoiceCommand_message=W\u00E4hlen Sie das Datum, f\u00FCr die Fakturierung der Rechnung [{0}]
 SendInvoiceCommand_title=Rechnung fakturieren...
