--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -85,9 +85,9 @@ labelTimeFrame=Time frame
 labelFrom=From:
 labelUntil=Until:
 labelLastMonth=Last month
-labelThisMonth=This month
+labelCurrentMonth=Current month
 labelLastYear=Last year
-labelThisYear=This year
+labelCurrentYear=Current year
 
 # really common labels
 labelAdd=Add...
