--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -78,9 +78,9 @@ labelTimeFrame=Zeitraum
 labelFrom=Von:
 labelUntil=Bis:
 labelLastMonth=Letzter Monat
-labelThisMonth=Dieser Monat
+labelCurrentMonth=Aktueller Monat
 labelLastYear=Letztes Jahr
-labelThisYear=Dieses Jahr
+labelCurrentYear=Aktuelles Jahr
 
 # really common labels
 labelAdd=Hinzuf\u00FCgen...
