added report for expenses

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -17,6 +17,8 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefund
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 
+ExpensesDataSource_expensesTitle=Ausgaben
+
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
 InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
 InvoiceDataSource_invoiceTitle=Rechnung
@@ -36,17 +38,20 @@ InvoiceDataSource_userTaxNumberHeader=Steuernummer:
 InvoiceDataSource_paymentConditionTradeCredit=Zahlungsbedingungen: {0} Tage rein netto.
 
 RevenueReportGenerator_clientTitle=Kunde
-RevenueReportGenerator_fromTitle=Von:
-RevenueReportGenerator_grossPriceTitle=Betrag (brutto)
 RevenueReportGenerator_invoiceDate=Rechnungsdatum
 RevenueReportGenerator_invoiceNumberTitle=Rechnungsnr.
-RevenueReportGenerator_netPriceTitle=Betrag (netto)
 RevenueReportGenerator_paymentDateTitle=Zahlungseingang
 RevenueReportGenerator_revenueTitle=Umsatzübersicht
-RevenueReportGenerator_sumTitle=Summe:
-RevenueReportGenerator_taxAmountTitle=USt. Summe
-RevenueReportGenerator_taxRateTitle=USt.
-RevenueReportGenerator_untilTitle=Bis:
+
+dateTitle=Datum
+descriptionTitle=Beschreibung
+fromTitle=Von:
+grossPriceTitle=Betrag (brutto)
+netPriceTitle=Betrag (netto)
+sumTitle=Summe:
+taxAmountTitle=USt. Summe
+taxRateTitle=USt.
+untilTitle=Bis:
 
 TaxId=Steuernr: {0}
 Phone=Telephon: {0}
