--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -17,6 +17,8 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
 
+ExpensesDataSource_expensesTitle=Expenses
+
 InvoiceDataSource_invoiceDateTitle=Invoice date:
 InvoiceDataSource_invoiceNumberTitle=Invoice no:
 InvoiceDataSource_invoiceTitle=Invoice
@@ -37,17 +39,20 @@ InvoiceDataSource_userTaxNumberHeader=Tax number:
 InvoiceDataSource_paymentConditionTradeCredit=Payment Terms: Net {0}.
 
 RevenueReportGenerator_clientTitle=Client
-RevenueReportGenerator_fromTitle=From:
-RevenueReportGenerator_grossPriceTitle=Amount (gross)
 RevenueReportGenerator_invoiceDate=Invoice date
 RevenueReportGenerator_invoiceNumberTitle=Invoice no.
-RevenueReportGenerator_netPriceTitle=Amount (net)
 RevenueReportGenerator_paymentDateTitle=Paid
 RevenueReportGenerator_revenueTitle=Revenue
-RevenueReportGenerator_sumTitle=Total:
-RevenueReportGenerator_taxAmountTitle=VAT amount
-RevenueReportGenerator_taxRateTitle=VAT perc.
-RevenueReportGenerator_untilTitle=Until:
+
+dateTitle=Date
+descriptionTitle=Description
+fromTitle=From:
+grossPriceTitle=Amount (gross)
+netPriceTitle=Amount (net)
+sumTitle=Total:
+taxAmountTitle=VAT amount
+taxRateTitle=VAT perc.
+untilTitle=Until:
 
 TaxId=Tax ID: {0}
 Phone=Phone: {0}
