--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -122,6 +122,9 @@ AddressWizardPage_title=Contact details
 CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
 CancelInvoiceCommand_confirmText=Confirm cancel
 
+ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
+ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
+
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
 
