--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -115,6 +115,9 @@ AddressWizardPage_title=Kontaktinformationen
 CancelInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] stornieren wollen?
 CancelInvoiceCommand_confirmText=Rechnung stornieren?
 
+ChangeExpensesViewTimeFrameCommand_message=Wählen Sie den Zeitraum für Ausgaben, die angezeigt werden sollen
+ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
+
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
 
