added selector dialog for reports added proper window icons for Revenue and Expenses Dialog

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -67,6 +67,7 @@ command.viewExpenses.label = View Expenses
 commandCategory.expense.name = Expense Command Category
 command.newExpense.name = New Expense...
 command.changeExpensesViewTimeFrame.name = Timeframe...
+command.openExpenseDialog.name = Expenses...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
