--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -28,6 +28,9 @@ iconsInvoiceOverdue=icons/page_error.png
 iconsInvoicePaid=icons/money.png
 iconsInvoiceSend=icons/page_go.png
 iconsUserEdit=icons/user_edit.png
+iconsRevenue=icons/money_add.png
+iconsExpenses=icons/money_delete.png
+iconsReports=icons/report.png
 	
 ###############################################################################
 # Common labels
@@ -128,6 +131,9 @@ ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
 
+ChooseReportCommand_message=Select the report to display
+ChooseReportCommand_title=Report selection
+	
 ClientEditorInput_tooltip=Edit this client
 ClientNameWizardPage_desc=Enter the name of your new client
 ClientNameWizardPage_title=Client name
