--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -121,6 +121,9 @@ ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
 
+ChooseReportCommand_message=W\u00E4hlen Sie den anzuzeigenden Report
+ChooseReportCommand_title=Report w\u00E4hlen
+
 ClientEditorInput_tooltip=Kunde bearbeiten
 ClientNameWizardPage_desc=Bitte geben Sie den Namen ihres neuen Kunden ein
 ClientNameWizardPage_title=Kundenname
