--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -65,6 +65,7 @@ command.deleteClient.name = Kunde löschen
 command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
+command.openExpenseDialog.name = Ausgaben...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
