first version of profit / overview dialog

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -91,4 +91,5 @@ commandCategory.revenue.name = Revenue Command Category
 command.export.data.label = Export data to XML...
 
 # COMMANDS - REPORTS
-command.reports.label = Reports...
+command.reports.name = Reports...
+command.profit.name = Profit
