--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -87,4 +87,5 @@ command.revenue.name = Umsatz...
 command.export.data.label = Daten nach XML exportieren...
 
 # COMMANDS - REPORTS
-command.reports.label = Berichte...
+command.reports.name = Berichte...
+command.profit.name = Profit
