added expense type "OTHER"

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -76,3 +76,4 @@ PaymentType_TRADE_CREDIT=Trade Credit
 ###############################################################################
 ExpenseType_OPEX=Operational Expense
 ExpenseType_CAPEX=Capital Expense
+ExpenseType_OTHER=Other
