--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -84,3 +84,4 @@ PaymentType_TRADE_CREDIT=Zielkauf
 ###############################################################################
 ExpenseType_OPEX=Betriebsausgabe
 ExpenseType_CAPEX=Investitionsausgabe
+ExpenseType_OTHER=Andere Ausgaben
