cash flow dialog

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -67,7 +67,7 @@ command.viewExpenses.label = View Expenses
 commandCategory.expense.name = Expense Command Category
 command.newExpense.name = New Expense...
 command.changeExpensesViewTimeFrame.name = Timeframe...
-command.openExpenseDialog.name = Expenses...
+command.openExpenseDialog.name = Expenses
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
@@ -92,4 +92,4 @@ command.export.data.label = Export data to XML...
 
 # COMMANDS - REPORTS
 command.reports.name = Reports...
-command.profit.name = Profit
+command.cashFlow.name = Cashflow
