--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -65,7 +65,7 @@ command.deleteClient.name = Kunde löschen
 command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
-command.openExpenseDialog.name = Ausgaben...
+command.openExpenseDialog.name = Ausgaben
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
@@ -81,11 +81,11 @@ command.change.invoice.filter = Filter...
 command.find.invoice.label = Rechnung finden
 
 # COMMANDS - REVENUE
-command.revenue.name = Umsatz...
+command.revenue.name = Umsatz
 
 # COMMANDS - OTHER
 command.export.data.label = Daten nach XML exportieren...
 
 # COMMANDS - REPORTS
 command.reports.name = Berichte...
-command.profit.name = Profit
+command.cashFlow.name = Cashflow
