--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -31,6 +31,7 @@ iconsUserEdit=icons/user_edit.png
 iconsRevenue=icons/money_add.png
 iconsExpenses=icons/money_delete.png
 iconsReports=icons/report.png
+iconsCashFlowStatement=icons/report_user.png
 	
 ###############################################################################
 # Common labels
@@ -70,6 +71,7 @@ labelPhone=Phone:
 labelPostalCode=Post Code:
 labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
+labelRevenue=Revenue
 labelRevenueRelevant=Revenue-relevant
 labelSearch=Search
 labelStreet=Street:
@@ -124,6 +126,15 @@ AddressWizardPage_title=Contact details
 
 CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
 CancelInvoiceCommand_confirmText=Confirm cancel
+
+CashFlowDialog_grossProfit=Gross Profit
+CashFlowDialog_inputTax=Input Tax
+CashFlowDialog_operatingExpenses=Operating expenses
+CashFlowDialog_outputTax=Output Tax
+CashFlowDialog_Result=Result
+CashFlowDialog_sum=Sum
+CashFlowDialog_title=Cash Flow
+CashFlowDialog_totalExpenses=Total Expenses
 
 ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
 ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
