--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -60,6 +60,7 @@ labelPhone=Telefon:
 labelPostalCode=Postleitzahl:
 labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
+labelRevenue=Umsatz
 labelRevenueRelevant=Umsatzrelevant
 labelSearch=Suchen
 labelStreet=Strasse:
@@ -114,6 +115,15 @@ AddressWizardPage_title=Kontaktinformationen
 
 CancelInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] stornieren wollen?
 CancelInvoiceCommand_confirmText=Rechnung stornieren?
+
+CashFlowDialog_grossProfit=Bruttoergebnis
+CashFlowDialog_inputTax=Vorsteuer
+CashFlowDialog_operatingExpenses=Betriebskosten
+CashFlowDialog_outputTax=Umsatzsteuer
+CashFlowDialog_Result=Ergebnis
+CashFlowDialog_sum=Saldo
+CashFlowDialog_title=Cash Flow
+CashFlowDialog_totalExpenses=Gesamtkosten
 
 ChangeExpensesViewTimeFrameCommand_message=Wählen Sie den Zeitraum für Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
