cash flow report

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -17,6 +17,21 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
 
+CashFlowDataSource_cashFlow=Cash Flow
+CashFlowDataSource_expenses=Expenses
+CashFlowDataSource_gross=Gross: 
+CashFlowDataSource_grossProfit=Gross profit:
+CashFlowDataSource_inputTax=Input tax:
+CashFlowDataSource_net=Net:
+CashFlowDataSource_operatingExpenses=Operating costs
+CashFlowDataSource_outputTax=Output tax:
+CashFlowDataSource_revenue=Revenue
+CashFlowDataSource_tax=Tax:
+CashFlowDataSource_taxSum=Sum:
+CashFlowDataSource_totalExpenses=Total costs
+CashFlowDataSource_vat=VAT
+CashFlowDataSource_vatSum=Result
+
 ExpensesDataSource_expensesTitle=Expenses
 
 InvoiceDataSource_invoiceDateTitle=Invoice date:
