--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -17,6 +17,21 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefund
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 
+CashFlowDataSource_cashFlow=Cash Flow
+CashFlowDataSource_expenses=Ausgaben
+CashFlowDataSource_gross=Brutto: 
+CashFlowDataSource_grossProfit=Bruttoergebnis:
+CashFlowDataSource_inputTax=Umsatzsteuer:
+CashFlowDataSource_net=Netto:
+CashFlowDataSource_operatingExpenses=Betriebskosten
+CashFlowDataSource_outputTax=Vorsteuer:
+CashFlowDataSource_revenue=Umsätze
+CashFlowDataSource_tax=Steuern:
+CashFlowDataSource_taxSum=Saldo:
+CashFlowDataSource_totalExpenses=Gesamtkosten
+CashFlowDataSource_vat=Umsatzsteuer
+CashFlowDataSource_vatSum=Ergebnis
+
 ExpensesDataSource_expensesTitle=Ausgaben
 
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
