--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -49,6 +49,8 @@ labelClientDetails=Client details
 labelClientName=Client name:
 labelClientNumber=Client number:
 labelDate=Date
+labelDepreciationMethod=Depreciation Method
+labelDepreciationPeriodInYears=Useful Life (years)
 labelDescription=Description
 labelEmail=Email:
 labelExpense=Expense
@@ -73,6 +75,7 @@ labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
 labelRevenue=Revenue
 labelRevenueRelevant=Revenue-relevant
+labelScrapValue=Scrap Value
 labelSearch=Search
 labelStreet=Street:
 labelSubtotal=Sub total
