--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -38,6 +38,8 @@ labelClientDetails=Kundendetails
 labelClientName=Kundenname:
 labelClientNumber=Kundennr:
 labelDate=Datum
+labelDepreciationMethod=Abschreibungsmethode
+labelDepreciationPeriodInYears=Nutzungsdauer (Jahre)
 labelDescription=Beschreibung
 labelEmail=Email:
 labelExpense=Ausgabe
@@ -62,6 +64,7 @@ labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
 labelRevenue=Umsatz
 labelRevenueRelevant=Umsatzrelevant
+labelScrapValue=Restwert
 labelSearch=Suchen
 labelStreet=Strasse:
 labelSubtotal=Zwischensumme
