--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -66,6 +66,7 @@ command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
 command.openExpenseDialog.name = Ausgaben
+command.editExpense.name = Ausgabe bearbeiten...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
