--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -69,6 +69,7 @@ command.newExpense.name = New Expense...
 command.changeExpensesViewTimeFrame.name = Timeframe...
 command.openExpenseDialog.name = Expenses
 command.editExpense.name = Edit Expense...
+command.copyExpense.name = Copy Expense
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
