--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -67,6 +67,7 @@ command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
 command.openExpenseDialog.name = Ausgaben
 command.editExpense.name = Ausgabe bearbeiten...
+command.copyExpense.name = Ausgabe kopieren
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
