added up/down moving of invoice positions in table

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -52,6 +52,7 @@ labelDate=Date
 labelDepreciationMethod=Depreciation Method
 labelDepreciationPeriodInYears=Useful Life (years)
 labelDescription=Description
+labelDown=Down
 labelEmail=Email:
 labelExpense=Expense
 labelExpenses=Expenses
@@ -87,6 +88,7 @@ labelTotalNet=Net total
 labelTotalTax=Tax total
 labelTotals=Totals
 labelUnit=Unit
+labelUp=Up
 
 # time frame
 labelTimeFrame=Time frame
