--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -41,6 +41,7 @@ labelDate=Datum
 labelDepreciationMethod=Abschreibungsmethode
 labelDepreciationPeriodInYears=Nutzungsdauer (Jahre)
 labelDescription=Beschreibung
+labelDown=Runter
 labelEmail=Email:
 labelExpense=Ausgabe
 labelExpenses=Ausgaben
@@ -76,6 +77,7 @@ labelTotalNet=Summe netto
 labelTotalTax=Summe Steuern
 labelTotals=Summen
 labelUnit=Einheit
+labelUp=Hoch
 
 # time frame
 labelTimeFrame=Zeitraum
