added revenue by year dialog and functionality

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -87,6 +87,7 @@ command.find.invoice.label = Find Invoice
 
 # COMMANDS - REVENUE
 command.revenue.name = Revenue...
+command.revenueByYear.name = Revenue by year...
 commandCategory.revenue.name = Revenue Command Category
 
 # COMMANDS - OTHER
