--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -84,6 +84,7 @@ command.find.invoice.label = Rechnung finden
 
 # COMMANDS - REVENUE
 command.revenue.name = Umsatz
+command.revenueByYear.name = Umsatz pro Jahr
 
 # COMMANDS - OTHER
 command.export.data.label = Daten nach XML exportieren...
