--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -78,6 +78,7 @@ labelTotalTax=Summe Steuern
 labelTotals=Summen
 labelUnit=Einheit
 labelUp=Hoch
+labelYear=Jahr
 
 # time frame
 labelTimeFrame=Zeitraum
@@ -227,6 +228,10 @@ ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u0
 ReportGenerationUtil_labelPdfFiles=PDF Dateien
 ReportGenerationUtil_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generierung erfolgreich
+
+RevenueByYearDialog_details=Details
+RevenueByYearDialog_title=Umsatz nach Jahren
+RevenueByYearDialog_years=Anzahl Jahre:
 
 RevenueDialog_client=Kunde
 RevenueDialog_defaultFilename=Umsatz
