--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -89,6 +89,7 @@ labelTotalTax=Tax total
 labelTotals=Totals
 labelUnit=Unit
 labelUp=Up
+labelYear=Year
 
 # time frame
 labelTimeFrame=Time frame
@@ -238,6 +239,10 @@ ReportGenerationUtil_errorNoReportingService=Reporting service not found, please
 ReportGenerationUtil_labelPdfFiles=PDF files
 ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generation finished
+
+RevenueByYearDialog_details=Details
+RevenueByYearDialog_title=Revenue by year
+RevenueByYearDialog_years=No. of years:
 
 RevenueDialog_client=Client
 RevenueDialog_defaultFilename=Revenue
