perspective ID and class name now specific to accounting

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -13,8 +13,10 @@ f###############################################################################
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-perspective.name = Accounting Perspective
 product.name = Togginho Accounting
+
+# perspectives
+perspective.accounting.name = Accounting
 
 # MAIN MENU ENTRIES
 menu.file.label = File
