--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -14,7 +14,9 @@
 # limitations under the License.
 ###############################################################################
 product.name = Togginho Accounting
-perspective.name = Accounting Perspective
+
+# perspectives
+perspective.accounting.name = Buchhaltung
 
 # MAIN MENU ENTRIES
 menu.file.label = Datei
