Added editor for existing Expenses

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -30,6 +30,7 @@ iconsInvoiceSend=icons/page_go.png
 iconsUserEdit=icons/user_edit.png
 iconsRevenue=icons/money_add.png
 iconsExpenses=icons/money_delete.png
+iconsExpenseEdit=icons/tag_blue_edit.png
 iconsReports=icons/report.png
 iconsCashFlowStatement=icons/report_user.png
 	
@@ -177,6 +178,8 @@ EditExpenseWizard_editDesc=Edit an existing expense
 EditInvoiceCommand_errorOpeningEditor=Error opening invoice [{0}].
 EditInvoiceCommand_uneditableMessage=This invoice cannot be edited anymore
 EditInvoiceCommand_uneditableText=Uneditable
+
+ExpenseEditor_title=Edit Expense
 
 ExportInvoiceCommand_addingReportParameters=Adding report parameters
 ExportInvoiceCommand_exportingReportToFile=Exporting report to file
