--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -167,6 +167,8 @@ EditInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der Rechnung [{0}]
 EditInvoiceCommand_uneditableMessage=Diese Rechnung kann nicht mehr editiert werden.
 EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
 
+ExpenseEditor_title=Ausgabe bearbeiten
+
 ExportInvoiceCommand_addingReportParameters=F\u00FCge Parameter f\u00FCr Report hinzu
 ExportInvoiceCommand_exportingReportToFile=Exportiere Report in Datei
 ExportInvoiceCommand_fillingReport=F\u00FClle Report
