--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -77,3 +77,9 @@ PaymentType_TRADE_CREDIT=Trade Credit
 ExpenseType_OPEX=Operational Expense
 ExpenseType_CAPEX=Capital Expense
 ExpenseType_OTHER=Other
+
+###############################################################################
+# Depreciation Methods
+###############################################################################
+DepreciationMethod_NONE=None
+DepreciationMethod_STRAIGHTLINE=Straight-line
