--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -85,3 +85,9 @@ PaymentType_TRADE_CREDIT=Zielkauf
 ExpenseType_OPEX=Betriebsausgabe
 ExpenseType_CAPEX=Investitionsausgabe
 ExpenseType_OTHER=Sonstige Ausgaben
+
+###############################################################################
+# Depreciation Methods
+###############################################################################
+DepreciationMethod_NONE=Keine Abschreibung
+DepreciationMethod_STRAIGHTLINE=Linear
