added command to delete expenses

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -163,7 +163,10 @@ CopyInvoiceCommand_errorExistingInvoice=An invoice with that number already exis
 CopyInvoiceCommand_errorOpeningEditor=Couldn't open editor for copied invoice
 
 DeleteClientCommand_confirmMessage=Are you sure you want to delete your client \"{0}\"?
-DeleteClientCommand_confirmText=Delete client?
+DeleteClientCommand_confirmText=Confirm delete
+
+DeleteExpenseCommand_confirmMessage=Are you sure you want to delete expense \"{0}\"?
+DeleteExpenseCommand_confirmText=Confirm delete
 
 DeleteInvoiceCommand_confirmMessage=Are you sure you want to delete invoice [{0}] ?
 DeleteInvoiceCommand_confirmText=Confirm delete
