--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -151,7 +151,10 @@ CopyInvoiceCommand_errorExistingInvoice=Eine Rechnung mit dieser Nummer existier
 CopyInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der neuen Rechnung.
 
 DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" l\u00F6schen wollen?
-DeleteClientCommand_confirmText=Kunde l\u00F6schen?
+DeleteClientCommand_confirmText=L\u00F6schen best\u00E4tigen
+
+DeleteExpenseCommand_confirmMessage=Sind Sie sicher, dass Sie die Ausgabe \"{0}\" l\u00F6schen wollen?
+DeleteExpenseCommand_confirmText=L\u00F6schen best\u00E4tigen
 
 DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] l\u00F6schen wollen?
 DeleteInvoiceCommand_confirmText=L\u00F6schen best\u00E4tigen
