i18n for delete expense command auto-closing editor for deleted expenses

--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -68,8 +68,9 @@ command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
 command.openExpenseDialog.name = Ausgaben
-command.editExpense.name = Ausgabe bearbeiten...
-command.copyExpense.name = Ausgabe kopieren
+command.editExpense.name = Bearbeiten
+command.copyExpense.name = Kopieren/Duplizieren
+command.deleteExpense.name = Löschen
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
