--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -71,7 +71,8 @@ command.newExpense.name = New Expense...
 command.changeExpensesViewTimeFrame.name = Timeframe...
 command.openExpenseDialog.name = Expenses
 command.editExpense.name = Edit Expense...
-command.copyExpense.name = Copy Expense
+command.copyExpense.name = Copy
+command.deleteExpense.name = Delete
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
