added BIC and IBAN to invoice template

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -47,7 +47,9 @@ InvoiceDataSource_totalGrossTitle=Total:
 InvoiceDataSource_totalNetTitle=Sub-Total:
 InvoiceDataSource_totalTaxAmountTitle=Sales Tax (19%):
 InvoiceDataSource_userBankAccountTitle=Account No:
+InvoiceDataSource_userBankBicTitle=BIC:
 InvoiceDataSource_userBankCodeTitle=Bank code:
+InvoiceDataSource_userBankIbanTitle=IBAN:
 InvoiceDataSource_userBankTitle=Bank:
 InvoiceDataSource_userTaxNumberHeader=Tax number:
 InvoiceDataSource_paymentConditionTradeCredit=Payment Terms: Net {0}.
