--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -47,7 +47,9 @@ InvoiceDataSource_totalGrossTitle=Rechnungsbetrag
 InvoiceDataSource_totalNetTitle=Summe netto gesamt:
 InvoiceDataSource_totalTaxAmountTitle=zzgl. 19% Umsatzsteuer:
 InvoiceDataSource_userBankAccountTitle=Kontonummer:
+InvoiceDataSource_userBankBicTitle=BIC:
 InvoiceDataSource_userBankCodeTitle=Bankleitzahl:
+InvoiceDataSource_userBankIbanTitle=IBAN:
 InvoiceDataSource_userBankTitle=Bankverbindung:
 InvoiceDataSource_userTaxNumberHeader=Steuernummer:
 InvoiceDataSource_paymentConditionTradeCredit=Zahlungsbedingungen: {0} Tage rein netto.
