--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -42,6 +42,7 @@ AccountingService_errorNoContext=Service kann nicht ohne Kontext initialisiert w
 AccountingService_errorServiceNotInitialised=Service ist nicht initialisiert!
 AccountingService_errorFileLocked=DB Datei [{0}] ist durch einen anderen Prozess gesperrt.
 AccountingService_errorIllegalFileFormat=Datei [{0}] hat ein ungültiges Format!
+AccountingService_errorDbFileNotFound=DB Datei [{0}] existiert nicht!\nBitte w\u00E4hlen Sie einen g\u00FCltigen Speicherort.
 AccountingService_errorServiceInit=Initialisierungsfehler
 AccountingService_errorIO=Datenbank Schreib- / Lesefehler
 AccountingService_errorDatabaseClosed=Datenbank ist geschlossen
