Added grouping of expenses by type in report dialog and exporter

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -75,9 +75,9 @@ PaymentType_TRADE_CREDIT=Trade Credit
 ###############################################################################
 # Expense types
 ###############################################################################
-ExpenseType_OPEX=Operational Expense
-ExpenseType_CAPEX=Capital Expense
-ExpenseType_OTHER=Other
+ExpenseType_OPEX=Operational Expenses
+ExpenseType_CAPEX=Capital Expenses
+ExpenseType_OTHER=Other Expenses
 
 ###############################################################################
 # Depreciation Methods
