--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -39,6 +39,7 @@ iconsCashFlowStatement=icons/report_user.png
 ###############################################################################
 labelAccountNumber=Account Number:
 labelAddress=Address
+labelAll=All
 labelBankAccount=Bank Account
 labelBankCode=Bank code / ID:
 labelBankName=Bank Name:
