--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -27,6 +27,7 @@
 ###############################################################################
 labelAccountNumber=Kontonummer:
 labelAddress=Adresse
+labelAll=Alle
 labelBankAccount=Bankverbindung
 labelBankCode=Bankleitzahl:
 labelBankName=Bank:
