added category to Expense model object

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -45,6 +45,7 @@ labelBankCode=Bank code / ID:
 labelBankName=Bank Name:
 labelBasicInformation=Basic Information:
 labelBIC=BIC:
+labelCategory=Category
 labelCity=City:
 labelClient=Client
 labelClientDetails=Client details
