--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -32,6 +32,7 @@ labelBankAccount=Bankverbindung
 labelBankCode=Bankleitzahl:
 labelBankName=Bank:
 labelBasicInformation=Grundinformationen:
+labelCategory=Kategorie
 labelBIC=BIC:
 labelCity=Stadt:
 labelClient=Kunde
