added category to expense report switched to newer version of JasperReports fixed sorting of expenses in dialog

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -33,6 +33,7 @@ CashFlowDataSource_vat=VAT
 CashFlowDataSource_vatSum=Result
 
 ExpensesDataSource_expensesTitle=Expenses
+ExpensesDataSource_expenseCategory=Category
 
 InvoiceDataSource_invoiceDateTitle=Invoice date:
 InvoiceDataSource_invoiceNumberTitle=Invoice no:
