--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -33,6 +33,7 @@ CashFlowDataSource_vat=Umsatzsteuer
 CashFlowDataSource_vatSum=Ergebnis
 
 ExpensesDataSource_expensesTitle=Ausgaben
+ExpensesDataSource_expenseCategory=Kategorie
 
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
 InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
