added i18n to TimeFrameType added pulldown menu to ExpensesView for quick selection of time frame ExpensesView title is now dynamic depending on selected time frame

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -84,3 +84,12 @@ ExpenseType_OTHER=Other Expenses
 ###############################################################################
 DepreciationMethod_NONE=None
 DepreciationMethod_STRAIGHTLINE=Straight-line
+
+###############################################################################
+# Time Frame Types
+###############################################################################
+TimeFrameType_currentMonth=Current Month
+TimeFrameType_lastMonth=Last Month
+TimeFrameType_currentYear=Current Year
+TimeFrameType_lastYear=Last Year
+TimeFrameType_custom=Custom
