--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -92,3 +92,12 @@ ExpenseType_OTHER=Sonstige Ausgaben
 ###############################################################################
 DepreciationMethod_NONE=Keine Abschreibung
 DepreciationMethod_STRAIGHTLINE=Linear
+
+###############################################################################
+# Time Frame Types
+###############################################################################
+TimeFrameType_currentMonth=Aktueller Monat
+TimeFrameType_lastMonth=Letzter Monat
+TimeFrameType_currentYear=Aktuelles Jahr
+TimeFrameType_lastYear=Letztes Jahr
+TimeFrameType_custom=Auswahl
