--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -73,6 +73,11 @@ command.openExpenseDialog.name = Expenses
 command.editExpense.name = Edit Expense...
 command.copyExpense.name = Copy
 command.deleteExpense.name = Delete
+command.changeTimeFrame.currentMonth = Current Month
+command.changeTimeFrame.lastMonth = Last Month
+command.changeTimeFrame.currentYear = Current Year
+command.changeTimeFrame.lastYear = Last Year
+command.changeTimeFrame.custom = Custom...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
