--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -71,6 +71,11 @@ command.openExpenseDialog.name = Ausgaben
 command.editExpense.name = Bearbeiten
 command.copyExpense.name = Kopieren/Duplizieren
 command.deleteExpense.name = Löschen
+command.changeTimeFrame.currentMonth = Aktueller Monat
+command.changeTimeFrame.lastMonth = Letzter Monat
+command.changeTimeFrame.currentYear = Aktuelles Jahr
+command.changeTimeFrame.lastYear = Letztes Jahr
+command.changeTimeFrame.custom = Auswahl...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
