--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -98,10 +98,6 @@ labelYear=Year
 labelTimeFrame=Time frame
 labelFrom=From:
 labelUntil=Until:
-labelLastMonth=Last month
-labelCurrentMonth=Current month
-labelLastYear=Last year
-labelCurrentYear=Current year
 
 # really common labels
 labelAdd=Add...
@@ -185,6 +181,8 @@ EditInvoiceCommand_uneditableMessage=This invoice cannot be edited anymore
 EditInvoiceCommand_uneditableText=Uneditable
 
 ExpenseEditor_title=Edit Expense
+
+ExpensesView_title=Expenses ({0})
 
 ExportInvoiceCommand_addingReportParameters=Adding report parameters
 ExportInvoiceCommand_exportingReportToFile=Exporting report to file
