--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -86,10 +86,6 @@ labelYear=Jahr
 labelTimeFrame=Zeitraum
 labelFrom=Von:
 labelUntil=Bis:
-labelLastMonth=Letzter Monat
-labelCurrentMonth=Aktueller Monat
-labelLastYear=Letztes Jahr
-labelCurrentYear=Aktuelles Jahr
 
 # really common labels
 labelAdd=Hinzuf\u00FCgen...
@@ -173,6 +169,8 @@ EditInvoiceCommand_uneditableMessage=Diese Rechnung kann nicht mehr editiert wer
 EditInvoiceCommand_uneditableText=Rechnung nicht editierbar
 
 ExpenseEditor_title=Ausgabe bearbeiten
+
+ExpensesView_title=Ausgaben ({0})
 
 ExportInvoiceCommand_addingReportParameters=F\u00FCge Parameter f\u00FCr Report hinzu
 ExportInvoiceCommand_exportingReportToFile=Exportiere Report in Datei
