Changed selection of expenses view to multiple Commands working on single expense now only enabled when only one expense is selected Added command to edit multiple expenses at once

--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -68,9 +68,10 @@ command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
 command.changeExpensesViewTimeFrame.name = Zeitraum...
 command.openExpenseDialog.name = Ausgaben
-command.editExpense.name = Bearbeiten
-command.copyExpense.name = Kopieren/Duplizieren
-command.deleteExpense.name = Löschen
+command.editExpense.name = Ausgabe bearbeiten...
+command.editMultipleExpenses.name = Mehrere Ausgaben bearbeiten...
+command.copyExpense.name = Ausgabe Kopieren/Duplizieren...
+command.deleteExpense.name = Ausgabe löschen
 command.changeTimeFrame.currentMonth = Aktueller Monat
 command.changeTimeFrame.lastMonth = Letzter Monat
 command.changeTimeFrame.currentYear = Aktuelles Jahr
