--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -71,6 +71,7 @@ command.newExpense.name = New Expense...
 command.changeExpensesViewTimeFrame.name = Timeframe...
 command.openExpenseDialog.name = Expenses
 command.editExpense.name = Edit Expense...
+command.editMultipleExpenses.name = Edit multiple expenses...
 command.copyExpense.name = Copy
 command.deleteExpense.name = Delete
 command.changeTimeFrame.currentMonth = Current Month
