completed handling and i18n for multi-edit expenses handler

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -224,6 +224,12 @@ MarkInvoiceAsPaidCommand_message=Select the payment date for the invoice
 MarkInvoiceAsPaidCommand_paymentDateLabel=Payment date:
 MarkInvoiceAsPaidCommand_title=Mark invoice as paid
 
+MultiEditExpensesHandler_title=Editing multiple expenses
+MultiEditExpensesHandler_message=Make desired changes and select the expenses on which these changes should be made.
+MultiEditExpensesHandler_apply=Apply
+MultiEditExpensesHandler_errorNoChanges=There are no changes to any data fields.\nAt least one field has to be edited for the selected expenses to be saved.
+MultiEditExpensesHandler_errorNoExpensesSelected=At least one expense has to be selected in the lower table. 
+
 NewClientWizard_windowTitle=Create a new client...
 NewClientWizard_unknownErrorMsg=Error saving Client
 NewClientWizard_errorSavingTitle=Error saving client
