--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -129,7 +129,7 @@ CashFlowDialog_sum=Saldo
 CashFlowDialog_title=Cash Flow
 CashFlowDialog_totalExpenses=Gesamtkosten
 
-ChangeExpensesViewTimeFrameCommand_message=Wählen Sie den Zeitraum für Ausgaben, die angezeigt werden sollen
+ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum für Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
 
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
@@ -211,6 +211,12 @@ MarkInvoiceAsPaidCommand_errorPaymentDateInTheFuture=Zahlungsdatum kann nicht in
 MarkInvoiceAsPaidCommand_message=W\u00E4hlen Sie das Zahlungsdatum f\u00FCr die Rechnung
 MarkInvoiceAsPaidCommand_paymentDateLabel=Zahlungsdatum:
 MarkInvoiceAsPaidCommand_title=Rechnung als bezahlt markieren
+
+MultiEditExpensesHandler_title=Mehrere Ausgaben bearbeiten
+MultiEditExpensesHandler_message=\u00C4nderungen auf ausgew\u00E4hlte Ausgaben anwenden und speichern.
+MultiEditExpensesHandler_apply=Auswahl
+MultiEditExpensesHandler_errorNoChanges=Sie haben keine \u00C4nderungen gemacht, die gespeichert werden können.
+MultiEditExpensesHandler_errorNoExpensesSelected=Mindestens eine Ausgabe muss gew\u00E4hlt werden, auf die \u00C4nderungen angewand werden soll.
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
 NewClientWizard_unknownErrorMsg=Fehler beim Speichern des Kunden.
